--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,67 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+	 <%#= image_tag "boule_albe.jpeg" %>
+	<div class="banner-content">
+		<div class="navbar-wagon">
+		  <!-- Logo -->
+		  <%= link_to root_path, class: "navbar-wagon-brand" do %>
+		    <%= image_tag "logo.jpeg", height: 50 %>
+		  <% end %>
+
+		  <!-- Right Navigation -->
+		  <div class="navbar-wagon-right hidden-xs hidden-sm">
+
+		    <a href="" class="navbar-wagon-item navbar-wagon-link">Host</a>
+		    <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
+		    <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
+
+		    <!-- Profile picture with dropdown list -->
+		    <div class="navbar-wagon-item">
+		      <div class="dropdown">
+		        <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+		        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+		          <li><a href="#">Profile</a></li>
+		          <li><a href="#">Dashboard</a></li>
+		          <li><a href="#">Log Out</a></li>
+		        </ul>
+		      </div>
+		    </div>
+		  </div>
+
+		  <!-- Dropdown appearing on mobile only -->
+		  <div class="navbar-wagon-item hidden-md hidden-lg">
+		    <div class="dropdown">
+		      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+		      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+		        <li><a href="#">Host</a></li>
+		        <li><a href="#">Trips</a></li>
+		        <li><a href="#">Messagese</a></li>
+		      </ul>
+		    </div>
+		  </div>
+		</div>
+		<div class="title">
+			<h1> Le Cercle </h1>
+			<h2> Le Club de Pétanque de Paris - Nanterre</h1>
+		</div>
+		<!-- <div class="logo-home">
+			<%#= link_to root_path, class: "navbar-wagon-brand" do %>
+		    <%#= image_tag "logo.jpeg" %>
+		  <#% end %>
+		</div> -->
+		<div>
+			<h2>Notre prochain tournoi</h2>
+			<div class=" card card-home col-xs-offset-4 col-xs-4 col-md-offset-4 col-md-4" data-tournament-id="<% %>">
+				<%= link_to "", tournament_path(@tournament), class: "card-link" %>
+				<p> <%= @tournament.name %> </p>
+			</div>
+		</div>
+	</div>
+</div>
+<div>
+	<h2>Les derniers tournois</h2>
+	<div class="wrapper-cards">
+		<div class="card-home">
+			<%#= link_to "", tournament_path(@tournament), class: "card-link" %>
+		</div>
+	</div>
+</div>
